Pictures and some functionality. Next step is filling in text

--- a/index.html
+++ b/index.html
@@ -18,13 +18,25 @@
     <div id="wrapper">
       <!-- Header -->
       <header id="header">
-        <div class="logo">
-          <span class="icon fa-gem"></span>
-        </div>
         <div class="content">
           <div class="inner">
             <h1>Marlon Cooper</h1>
             <p>My portfolio showcasing my work</p>
+            <ul class="icons">
+              <li>
+                <a
+                  href="https://github.com/MarlonCGH"
+                  target="_blank"
+                  class="icon brands fa-github"
+                  ><span class="label">GitHub</span></a
+                >
+              </li>
+              <li>
+                <a href="#" class="icon brands fa-linkedin"
+                  ><span class="label">Linkedin</span></a
+                >
+              </li>
+            </ul>
           </div>
         </div>
         <nav>
@@ -42,7 +54,7 @@
         <!-- Work -->
         <article id="work">
           <h2 class="major">Work</h2>
-          <span class="image main"><img src="images/pic02.jpg" alt="" /></span>
+          <span class="image main"><img src="/images/pic02.jpg" alt="" /></span>
           <p>
             Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu,
             at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent
@@ -63,7 +75,7 @@
         <!-- About -->
         <article id="about">
           <h2 class="major">About</h2>
-          <span class="image main"><img src="images/pic03.jpg" alt="" /></span>
+          <span class="image main"><img src="/images/pic03.jpg" alt="" /></span>
           <p>
             Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent
             eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam
@@ -102,22 +114,10 @@
           </form>
           <ul class="icons">
             <li>
-              <a href="#" class="icon brands fa-twitter"
-                ><span class="label">Twitter</span></a
-              >
-            </li>
-            <li>
-              <a href="#" class="icon brands fa-facebook-f"
-                ><span class="label">Facebook</span></a
-              >
-            </li>
-            <li>
-              <a href="#" class="icon brands fa-instagram"
-                ><span class="label">Instagram</span></a
-              >
-            </li>
-            <li>
-              <a href="#" class="icon brands fa-github"
+              <a
+                href="https://github.com/MarlonCGH"
+                target="_blank"
+                class="icon brands fa-github"
                 ><span class="label">GitHub</span></a
               >
             </li>
@@ -435,7 +435,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
       <!-- Footer -->
       <footer id="footer">
         <p class="copyright">
-          &copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.
+          &copy; 2020 Marlon Cooper.
         </p>
       </footer>
     </div>
